# sdl

./: .gitignore  .gitmodules
firstSdlWindow/: CMakeLists.txt  main.cpp
firstSdlWindow/classes/: GlobalState.cpp  GlobalState.h  MovingPoint.cpp  MovingPoint.h  Vec2D.cpp  Vec2D.h
snake/: Apple.cpp  Apple.h  CMakeLists.txt  Direction.h  GlobalState.h  Head.cpp  Head.h  Tail.cpp  Tail.h  main.cpp
